影院列表和影院下拉列表

--- a/HuiYing/Base.lproj/Main.storyboard
+++ b/HuiYing/Base.lproj/Main.storyboard
@@ -24,15 +24,17 @@
                             </segments>
                         </segmentedControl>
                     </navigationItem>
+                    <connections>
+                        <outlet property="segmentedControl" destination="TFF-7O-SyA" id="UMw-Gb-vsg"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-52" y="371"/>
+            <point key="canvasLocation" x="-71" y="358"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="75s-Ds-GRL">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="6hv-EW-3bI" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Fum-69-ieN" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="hhe-S5-Si7">
@@ -44,8 +46,9 @@
                         <segue destination="vXZ-lx-hvc" kind="relationship" relationship="rootViewController" id="5VP-Ok-NeL"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6hv-EW-3bI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-457" y="371"/>
+            <point key="canvasLocation" x="-457" y="370.99999999999994"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
